--- a/css/estilo.css
+++ b/css/estilo.css
@@ -276,21 +276,16 @@ body {
 }
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 por linha */
+  grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   margin-bottom: 10px;
+  justify-items: center; /* 👈 centraliza cards */
 }
 
 .card {
-  background: #fff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 10px 6px;
-  font-size: 13px;
+  width: 100%;
+  max-width: 110px;
   text-align: center;
-  cursor: pointer;
-  user-select: none;
-  transition: all 0.2s ease;
 }
 
 .card:hover {
@@ -301,4 +296,35 @@ body {
   background-color: #2ecc71;
   color: #fff;
   border-color: #2ecc71;
+}
+.add-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin: 12px 0 24px;
+}
+
+.add-box input {
+  width: 70%;
+  max-width: 220px;
+  padding: 8px 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 13px;
+}
+
+.add-box button {
+  width: 36px;
+  height: 36px;
+  border: none;
+  border-radius: 50%;
+  background-color: #2ecc71;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.add-box button:hover {
+  background-color: #27ae60;
 }
