--- a/css/estilo.css
+++ b/css/estilo.css
@@ -601,21 +601,22 @@ body {
 
 /* Imagem de fundo para todo o site */
 body {
-    position: relative;  /* necessário para o pseudo-elemento */
-    margin: 0;           /* remove margens padrão */
+    position: relative;
+    margin: 0;
 }
 
 body::before {
     content: "";
-    position: fixed;                  /* fica fixo na tela */
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('img/logofo.png'); /* caminho da sua imagem */
-    background-size: cover;           /* cobre toda a tela */
-    background-position: center;      /* centraliza */
-    background-repeat: no-repeat;     /* não repete */
-    opacity: 0.3;                     /* controla a transparência */
-    z-index: -1;                       /* fica atrás de todo conteúdo */
+    background-image: url('../img/logofo.png'); /* ajuste o caminho conforme a pasta do CSS */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.3;
+    z-index: -1;
 }
+
